# datasets-analyzer-vkr

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_enable_pgvector.py  0ccd11851be7_add_quality_rules_flags_analysis_results.py  565cc4d66be6_add_recommender_baseline_external_.py  5a9c12db51b7_add_user_dataset_analysis_tables.py  c15193c9b987_add_reports_table.py
backend/app/: config.py  file_storage.py  main.py
backend/app/api/: admin.py  analyses.py  auth.py  datasets.py  deps.py  health.py  reports.py
backend/app/core/: db.py  security.py
backend/app/models/: __init__.py  analysis.py  analysis_result.py  dataset.py  external_dataset.py  quality_flag.py  quality_rule.py  report.py  user.py
backend/app/repositories/: admin_repo.py  analysis_repo.py  dataset_repo.py  external_dataset_repo.py  quality_flag_repo.py  report_repo.py  user_repo.py
backend/app/schemas/: admin.py  analysis.py  auth.py  baseline.py  dataset.py  report.py  task_recommendation.py  user.py
backend/app/scripts/: promote_to_admin.py
backend/app/services/: analysis_service.py  baseline_orchestrator.py  baseline_trainer.py  chart_renderer.py  dataset_matcher.py  dataset_service.py  profiler.py  quality_checker.py  report_service.py  task_recommender.py
backend/app/templates/report/: report.css  report.html
backend/app/utils/: jsonb.py
backend/ml/: build_real_set.py  build_synthetic_set.py  feature_vector.py  train_meta_classifier.py
backend/ml/data/: real_set.json
backend/ml/models/: meta_classifier_report.json
backend/seeds/: seed_external_datasets.py  seed_quality_rules.py
backend/tests/: conftest.py  test_health.py
backend/tests/integration/: test_admin_flow.py  test_analysis_flow.py  test_auth_flow.py  test_baseline_flow.py  test_datasets_upload.py  test_history_pagination.py  test_recommender_flow.py  test_reports_flow.py
backend/tests/unit/: test_baseline_trainer.py  test_chart_renderer.py  test_dataset_matcher.py  test_profiler.py  test_quality_checker.py  test_report_model.py  test_report_service.py  test_task_recommender.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: admin.ts  analyses.ts  auth.ts  client.ts  datasets.ts  health.ts  reports.ts
frontend/src/components/: ServerStatus.tsx
frontend/src/hooks/: useAnalysisPolling.ts  useBaselinePolling.ts  useReportPolling.ts
frontend/src/lib/: constants.ts  format.ts
frontend/src/pages/: Admin.tsx  AnalysisResult.tsx  History.tsx  Landing.tsx  Login.tsx  Profile.tsx  Register.tsx  (+1 more)
(+21 files in other folders)
