[project]
name = "analyzer-backend"
version = "0.1.0"
description = "Backend для системы анализа табличных датасетов"
requires-python = ">=3.11"

# В Спринте 0 ставим только минимально необходимые зависимости.
# Тяжёлые библиотеки (numpy, scipy, scikit-learn, openml, weasyprint, matplotlib, jinja2)
# подключаются по мере необходимости в Спринтах 1-5.
dependencies = [
    # Web API
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.1.18",
    # Auth (используется со Спринта 1)
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0",
    "python-multipart>=0.0.9",
    "email-validator>=2.0.0",
    # Data
    "pandas>=2.2.0",
    "openpyxl>=3.1",
    "chardet>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
